--- a/package.json
+++ b/package.json
@@ -6,13 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview",
+    "test": "jest",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --ext .js,.vue src --fix"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@testing-library/vue": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "sass": "^1.61.0",
+    "vue": "^3.2.47",
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.10.0",
+    "prettier": "^2.8.7",
     "vite": "^4.2.0"
   }
 }
