Started unit testing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
   "env": {
     "browser": true,
     "amd": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
@@ -33,5 +34,9 @@
         "no-unused-vars": "off"
       }
     }
-  ]
+  ],
+  "globals": {
+    "module": true,
+    "process": true
+  }
 }
