--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "serve": "vite preview",
     "lint": "npm run lint:format && npm run lint:fix",
     "lint:fix": "eslint ./src --ext .js,.vue --quiet --fix --ignore-path ./.gitignore",
-    "lint:format": "prettier --loglevel warn --write \"./**/*.{js,vue,css,md,json}\""
+    "lint:format": "prettier --loglevel warn --write \"./**/*.{js,vue,css,md,json}\"",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
@@ -18,13 +21,21 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/vue3-jest": "^28.1.0",
+    "babel-jest": "^28.1.3",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-vue": "^9.10.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "^2.8.7",
     "vite": "^4.2.0"
   }
